--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -13,3 +13,14 @@ h1{
 .small-box{
     background-color: white;
 }
+
+.container-fluid #calendar{
+    background-color: white;
+    border: 1px solid lightgray;
+    border-radius: 3px;
+    margin: 1em;
+}
+
+.employee-details{
+    font-size: .85em;
+}
