--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11127,3 +11127,28 @@ h1 {
   font-size: 0.85em;
 }
 
+.modal-header {
+  background: #2C3E50;
+  color: white;
+}
+
+.modal-title {
+  font-weight: bold;
+}
+
+select option {
+  font-size: 0.85em;
+}
+
+.leave_request {
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #EEE;
+}
+
+.leave_request:last-child {
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  border-bottom: none;
+}
+
